--- a/TimeLoggingApp/Views/Home/Index.cshtml
+++ b/TimeLoggingApp/Views/Home/Index.cshtml
@@ -2,6 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
+<form asp-controller="Home" asp-action="Generate" method="post">
+    <input type="submit" value="Generate" />
+</form>
+
+
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
