removing global usings

--- a/TimeLoggingApp/Views/Home/Data.cshtml
+++ b/TimeLoggingApp/Views/Home/Data.cshtml
@@ -3,9 +3,10 @@
 <table id="collectionTable" class="table">
     <thead>
         <tr>
-            <th scope="col">Header 1</th>
-            <th scope="col">Header 2</th>
-            <th scope="col">Header 3</th>
+            <th scope="col">ID</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Last Name</th>
+            <th scope="col">Email</th>
         </tr>
     </thead>
     <tbody>
@@ -15,6 +16,7 @@
                 <td>@entity.TeamMemberId</td>
                 <td>@entity.FirstName</td>
                 <td>@entity.LastName</td>
+                <td>@entity.Email</td>
             </tr>
         }
     </tbody>
