--- a/TimeLoggingApp/Views/Home/Data.cshtml
+++ b/TimeLoggingApp/Views/Home/Data.cshtml
@@ -21,3 +21,14 @@
         }
     </tbody>
 </table>
+
+@section Scripts
+{
+    <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#collectionTable').dataTable();
+        });
+    </script>
+}
