--- a/TheWpfApp/Home.xaml
+++ b/TheWpfApp/Home.xaml
@@ -11,8 +11,9 @@
     <Grid Margin="10,0,10,10">
         <Grid.Resources>
             <!-- Name item template -->
+            <!--<Label Content="{Binding XPath=@Name}"/>-->
             <DataTemplate x:Key="nameItemTemplate">
-                <Label Content="{Binding XPath=@Name}"/>
+                <Label Content="{Binding Path=Name}"/>
             </DataTemplate>
             <!-- Expense Report Data -->
             <XmlDataProvider x:Key="ExpenseDataSource" XPath="Expenses">
@@ -23,13 +24,11 @@
                             <Expense ExpenseType="Transportation" ExpenseAmount="50" />
                         </Person>
                         <Person Name="Lisa" Department="Marketing">
-                            <Expense ExpenseType="Document printing"
-          ExpenseAmount="50"/>
+                            <Expense ExpenseType="Document printing" ExpenseAmount="50"/>
                             <Expense ExpenseType="Gift" ExpenseAmount="125" />
                         </Person>
                         <Person Name="John" Department="Engineering">
-                            <Expense ExpenseType="Magazine subscription" 
-         ExpenseAmount="50"/>
+                            <Expense ExpenseType="Magazine subscription" ExpenseAmount="50"/>
                             <Expense ExpenseType="New machine" ExpenseAmount="600" />
                             <Expense ExpenseType="Software" ExpenseAmount="500" />
                         </Person>
@@ -66,8 +65,8 @@
         <Border Grid.Column="1" Grid.Row="1" Style="{StaticResource listHeaderStyle}">
             <Label Style="{StaticResource listHeaderTextStyle}">Names</Label>
         </Border>
-        <ListBox Name="peopleListBox" Grid.Column="1" Grid.Row="2" 
-                 ItemsSource="{Binding Source={StaticResource ExpenseDataSource}, XPath=Person}"
+        <!--ItemsSource="{Binding Source={StaticResource ExpenseDataSource}, XPath=Person}"-->
+        <ListBox Name="ListBoxPeople" Grid.Column="1" Grid.Row="2" 
                  ItemTemplate="{StaticResource nameItemTemplate}">
         </ListBox>
 
