--- a/TheWpfApp/Report.xaml
+++ b/TheWpfApp/Report.xaml
@@ -30,11 +30,11 @@
             <Grid.Resources>
                 <!-- Reason item template -->
                 <DataTemplate x:Key="typeItemTemplate">
-                    <Label Content="{Binding XPath=@ExpenseType}"/>
+                    <Label Content="{Binding Path=ExpenseType}"/>
                 </DataTemplate>
                 <!-- Amount item template -->
                 <DataTemplate x:Key="amountItemTemplate">
-                    <Label Content="{Binding XPath=@ExpenseAmount}"/>
+                    <Label Content="{Binding Path=ExpenseAmount}"/>
                 </DataTemplate>
             </Grid.Resources>
             
@@ -51,20 +51,20 @@
             <!-- Name -->
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Orientation="Horizontal">
                 <Label Style="{StaticResource labelStyle}">Name:</Label>
-                <Label Style="{StaticResource labelStyle}" Content="{Binding XPath=@Name}"></Label>
+                <Label Style="{StaticResource labelStyle}" Content="{Binding Path=Name}"></Label>
             </StackPanel>
 
             <!-- Department -->
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Orientation="Horizontal">
                 <Label Style="{StaticResource labelStyle}">Department:</Label>
-                <Label Style="{StaticResource labelStyle}" Content="{Binding XPath=@Department}"></Label>
+                <Label Style="{StaticResource labelStyle}" Content="{Binding Path=Department}"></Label>
             </StackPanel>
 
             <Grid Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" VerticalAlignment="Top" 
             HorizontalAlignment="Left">
                 <!-- Expense type and Amount table -->
                 <!-- Expense type and Amount table -->
-                <DataGrid ItemsSource="{Binding XPath=Expense}" ColumnHeaderStyle="{StaticResource columnHeaderStyle}" AutoGenerateColumns="False" RowHeaderWidth="0" >
+                <DataGrid x:Name="DataGridExpenses" ItemsSource="{Binding Path=Expenses}" ColumnHeaderStyle="{StaticResource columnHeaderStyle}" AutoGenerateColumns="False" RowHeaderWidth="0" >
 
                     <DataGrid.Columns>
                         <DataGridTemplateColumn Header="ExpenseType" CellTemplate="{StaticResource typeItemTemplate}" />
